--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
     {% assign default_paths = site.pages | map: "path" %}
     {% assign page_paths = site.header_pages | default: default_paths %}
-    <a class="site-logo" href="{{ "/" | relative_url }}">
+    <a class="site-logo" href="http://storrito.com/">
       <img src="/images/logo.png" alt="Logo"></img>
     </a>
 
@@ -21,12 +21,7 @@
         </label>
 
         <div class="trigger">
-          {% for path in page_paths %}
-            {% assign my_page = site.pages | where: "path", path | first %}
-            {% if my_page.title %}
-            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-            {% endif %}
-          {% endfor %}
+          <a class="page-link" href="{{ "/" | relative_url }}"> Blog </a>
         </div>
       </nav>
     {% endif %}
