--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,9 @@
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
   <div class="wrapper">
+
+    <h2 class="footer-heading">{{ site.title | escape }}</h2>
+
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
@@ -10,14 +13,11 @@
               {{ site.author | escape }}
             {% else %}
               {{ site.title | escape }}
-            {% endif %} 
-          </li>
-          <li>
-            <a href="http://storrito.com/imprint/"> Imprint </a>
-          </li>
-        {% if site.email %}
-          <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        {% endif %}
+            {% endif %}
+            </li>
+            {% if site.email %}
+            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+            {% endif %}
         </ul>
       </div>
 
