Stopped tracking of sites/, added back hrefs to blog posts

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -12,6 +12,7 @@ $spacing-unit:     30px !default;
 
 $storrito-red:     #ff404c !default;
 $white:            #fff !default;
+$black:            #000 !default;
 
 $text-color:       #111 !default;
 $background-color: #fdfdfd !default;
