--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -29,6 +29,9 @@
 
   .page-link {
     color: $white;
+    @include media-query($on-palm){
+      color: $black;
+    }
     line-height: $base-line-height;
     font-size: 15px;
     font-weight: 700;
@@ -130,13 +133,13 @@
 }
 
 .footer-col-1 {
-  width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-  width:         calc(35% - (#{$spacing-unit} / 2));
+  width: -webkit-calc(50% - (#{$spacing-unit} / 2));
+  width:         calc(50% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-2 {
-  width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-  width:         calc(20% - (#{$spacing-unit} / 2));
+  width: -webkit-calc(50% - (#{$spacing-unit} / 2));
+  width:         calc(50% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-3 {
@@ -179,6 +182,7 @@
 }
 
 .post-list-heading {
+  font-weight: bolder;
   @include relative-font-size(1.75);
 }
 
