--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,11 @@ layout: default
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
+
+    <p>
+      <a class="page-link" href="{{ "/" | relative_url }}"> Back </a>
+    </p>
+
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
     <p class="post-meta">
       <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
@@ -22,6 +27,10 @@ layout: default
   {% if site.disqus.shortname %}
     {% include disqus_comments.html %}
   {% endif %}
+
+  <p>
+    <a class="page-link" href="{{ "/" | relative_url }}"> Back to all Posts </a>
+  </p>
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
