--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -104,7 +104,7 @@ a {
   text-decoration: none;
 
   &:visited {
-    color: darken($brand-color, 15%);
+    color: lighten($brand-color, 30%);
   }
 
   &:hover {
