No text decoration for header links

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -36,6 +36,7 @@
     font-size: 0.9rem;
     font-weight: 700;
     text-transform: uppercase;
+    text-decoration: none;
     letter-spacing: 0.085em;
 
     // Gaps between nav items, but not on the last one
