Added Intercom, heapanalytics, mixpanel and heapanalytics badge

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
   <div class="wrapper">
-    <div class="footer-col-wrapper">
+    <div class="footer-col-wrapper" style= "display: flex; justify-content: center;">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li class="p-name">
@@ -21,9 +21,13 @@
         </ul>
       </div>
 
-      <div class="footer-col footer-col-2">
+      <div class="footer-col footer-col-2" style= "display: flex; justify-content: flex-end;">
         {% include social.html %}
       </div>
+    </div>
+
+    <div style="display: flex; justify-content: center;">
+      <a href="https://heapanalytics.com/?utm_source=badge" rel="nofollow"><img style="width:108px;height:41px" src="//heapanalytics.com/img/badge.png" alt="Heap | Mobile and Web Analytics" /></a>
     </div>
 
   </div>
