--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -16,7 +16,7 @@ $black:            #000 !default;
 
 $text-color:       #111 !default;
 $background-color: #fdfdfd !default;
-$brand-color:      #000 !default;
+$brand-color:      #ff404c !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
