--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     {% assign default_paths = site.pages | map: "path" %}
     {% assign page_paths = site.header_pages | default: default_paths %}
     <a class="site-logo" href="http://storrito.com/">
-      <img src="/images/logo.png" alt="Logo"></img>
+      <img src="/images/storrito-black.svg" alt="Logo"></img>
     </a>
 
     {% if page_paths %}
@@ -22,14 +22,14 @@
 
         <div class="trigger">
           <a class="page-link storrito-app-link" href="https://app.storrito.com/">
+            Try it free
+          </a>
+
+          <a class="login-link storrito-app-link" href="https://app.storrito.com/">
             <svg width="14px" height="14px" viewBox="0 0 512 512" style="margin-bottom: -3px; margin-right: 15px;">
               <path fill="currentColor" d="M256 0c88.366 0 160 71.634 160 160s-71.634 160-160 160S96 248.366 96 160 167.634 0 256 0zm183.283 333.821l-71.313-17.828c-74.923 53.89-165.738 41.864-223.94 0l-71.313 17.828C29.981 344.505 0 382.903 0 426.955V464c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48v-37.045c0-44.052-29.981-82.45-72.717-93.134z" class=""></path></svg>
             </svg>
             Login
-          </a>
-
-          <a class="page-link storrito-app-link" href="https://app.storrito.com/">
-            Create free account
           </a>
         </div>
 
