--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
   <header class="post-header">
 
     <p>
-      <a class="page-link" href="{{ "/" | relative_url }}"> Back </a>
+      <a class="page-link" href="{{ "/" | relative_url }}"> Back to all Posts </a>
     </p>
 
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
