--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -230,6 +230,42 @@
   margin-bottom: $spacing-unit;
 }
 
+.post-footer {
+  display: flex;
+  flex-direction: column;
+}
+
+.post-footer-panel {
+  display: flex;
+  flex-direction: column;
+  background-color: #ff404c17;
+  padding: 8px;
+  box-shadow: 2px 2px 10px 2px rgba(0,0,0,0.3);
+  border-radius: 5px;
+
+  .page-link {
+    align-self: center;
+    color: $white;
+    background-color: $storrito-red;
+  }
+
+  .storrito-app-link {
+    padding: 10px 14px;
+    border: 2px solid $storrito-red;
+    border-radius: 5px;
+    letter-spacing: 0.05em;
+    line-height: $base-line-height;
+    font-size: 0.9rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-decoration: none;
+    // Gaps between nav items, but not on the last one
+    &:not(:last-child) {
+      margin-right: 20px;
+    }
+  }
+}
+
 .post-title {
   @include relative-font-size(2.2);
   letter-spacing: -1px;
