wording, added a link

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,12 +34,14 @@ layout: default
       style="align-self:center; object-fit:cover; object-position: top; height:160px; width:90px;">
     <div class="post-footer-panel">
       <div style="text-align: center;">
-        Storrito.com is a tool that lets you create and schedule Instagram Stories directly from your <b>desktop
+        <b><a href="https://storrito.com/">Storrito.com</a></b> is a tool that lets you create and schedule Instagram
+        Stories directly from your <b>desktop
           browser.</b>
       </div>
       <ul>
         <li> Post and schedule videos and images </li>
-        <li> Online editor to add <b>working</b> interactive elements such as hashtags, locations, quizzes, polls and much more... </li>
+        <li> Online editor to add <b>working</b> interactive elements such as hashtags, locations, quizzes, polls and
+          much more... </li>
         <li> Add awesome <b>Gif animations</b> to your images and videos </li>
         <li> Connect and manage as many Instagram accounts as you want with Storrito </li>
       </ul>
