New Christmas 2019 blog post Removed facebook and ig links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,14 +6,22 @@
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li class="p-name">
-            {% if site.author %}
-              {{ site.author | escape }}
-            {% else %}
-              {{ site.title | escape }}
-            {% endif %}
+            <a href="/">
+              {% if site.author %}
+                {{ site.author | escape }}
+              {% else %}
+                {{ site.title | escape }}
+              {% endif %}
+            </a>
           </li>
           <li>
-            <a href="http://storrito.com/imprint/"> Imprint </a>
+            <a href="https://storrito.com/"> Storrito Website </a>
+          </li>
+          <li>
+            <a href="https://app.storrito.com/"> Storrito Platform </a>
+          </li>
+          <li>
+            <a href="https://storrito.com/imprint/"> Imprint </a>
           </li>
         {% if site.email %}
           <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
