--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -52,11 +52,9 @@ main {
  * Images
  */
 img {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  object-fit: scale-down;
-  vertical-align: middle;
+  max-width: 100%;
+  display: block;
+  margin: 0px auto;
 }
 
 
