activate session merge

--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -5,6 +5,10 @@
 // Crisp
 window.$crisp=[];
 window.CRISP_WEBSITE_ID="9636e685-6ccb-432c-85dd-0d5e91fbbf83";
+window.CRISP_RUNTIME_CONFIG = {
+  session_merge : true
+};
+
 (function(){
   d=document;
   s=d.createElement("script");
